[package]
name = "led_matrix_websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"

futures-util = "0.3"
futures-channel = "0.3"

tokio = { version = "1.21.0", features = ["full"] }

serde_json = "1.0.78"

regex = "1"
lazy_static = "1.4.0"
